# voice-to-text-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: README.md  cr.md  listen.md  rc.md  st.md  tr.md  transcribe.md
models/: README.md
scripts/: README.md  download-models.sh
src/: audio.rs  config.rs  error.rs  lib.rs  main.rs  mcp_server.rs  platform.rs  platform_compat.rs  whisper.rs
tests/: integration_tests.rs  mcp_interface_tests.rs  property_tests.rs  voice_command_tests.rs
