[package]
name = "voice-to-text-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.2.1", features = ["schemars"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.16.0"
whisper-rs = { version = "0.14.3", features = ["cuda"] }
hound = "3.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.4"
futures = "0.3"
